chore: parse psbt or raw tx